--- a/src/services_platform/portfolioes/style_portfolio/ArchiPortfolio.css
+++ b/src/services_platform/portfolioes/style_portfolio/ArchiPortfolio.css
@@ -30,7 +30,7 @@
  }
  
 .portfolio_a section{
-    height :100vh;
+    
     padding: 10rem 9% 2rem;
  }
 
@@ -145,6 +145,90 @@
     .portfolio-layer_a h4{
         font-size: 1.5rem;
         justify-content: center;
+        padding-bottom: 300px;
+        
         
     }
+    .portfolio-container_a{
+        display: block;
+        
+    }
+    .portfolio-box_a{
+        margin-bottom: 30px;
+        
+    }
+    h2.heading_a{
+        
+        font-size: 3rem; 
+}
+}
+
+/* ---contact ---- */
+.contact_a span{
+    color:var(--main-color);
+ }
+
+ .contact_a h2{
+ margin-bottom: 3rem;
+ }
+.contact_a{
+    background-color: var(--bg-color); 
+}
+
+
+.contact_a form{
+    max-width: 40rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+    padding-bottom: 100px;
+}
+
+.contact_a form .input-box_a{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+.contact_a form .input-box_a input,
+.contact_a form textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: .9rem;
+    color:var(--text-color);
+    background: var(--second-bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+
+}
+
+.contact_a form .input-box_a input{
+    width:49%;
+}
+
+.contact_a form textarea{
+    resize :none;
+
+}
+.contact_a form .btn_a{
+    margin-top: 2rem;
+    cursor: pointer;
+    display: inline-block;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1rem;
+    color: var(--second-bg-color);
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    height: 30px;
+    width: 200px;
+    
+    
+}
+
+
+.btn_a:hover{
+    box-shadow: none;
 }
