--- a/src/services_platform/portfolioes/style_portfolio/QAPortfolio.css
+++ b/src/services_platform/portfolioes/style_portfolio/QAPortfolio.css
@@ -8,6 +8,7 @@
     outline: none;
     scroll-behavior: smooth;
     font-family: 'Poppins',sans-serif;
+    
 }
 
 :root{
@@ -20,7 +21,7 @@
 .headportfolio_q{
    background-color: var(--bg-color);
    color: var(--text-color);
-   height: 100vh;
+   height :100vh;
    
  }
 .portfolio_q header{
@@ -30,7 +31,7 @@
  }
  
 .portfolio_q section{
-    height :100vh;
+    
     padding: 10rem 9% 2rem;
  }
 
@@ -145,6 +146,90 @@
     .portfolio-layer_q h4{
         font-size: 1.5rem;
         justify-content: center;
+        padding-bottom: 300px;
+        
         
     }
+    .portfolio-container_q{
+        display: block;
+        
+    }
+    .portfolio-box_q{
+        margin-bottom: 30px;
+        
+    }
+    h2.heading_q{
+        
+        font-size: 3rem; 
+}
+}
+
+/* ---contact ---- */
+.contact_q span{
+    color:var(--main-color);
+ }
+
+ .contact_q h2{
+ margin-bottom: 3rem;
+ }
+.contact_q{
+    background-color: var(--bg-color); 
+}
+
+
+.contact_q form{
+    max-width: 40rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+    padding-bottom: 100px;
+}
+
+.contact_q form .input-box_q{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+.contact_q form .input-box_q input,
+.contact_q form textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: .9rem;
+    color:var(--text-color);
+    background: var(--second-bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+
+}
+
+.contact_q form .input-box_q input{
+    width:49%;
+}
+
+.contact_q form textarea{
+    resize :none;
+
+}
+.contact_q form .btn_q{
+    margin-top: 2rem;
+    cursor: pointer;
+    display: inline-block;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1rem;
+    color: var(--second-bg-color);
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    height: 30px;
+    width: 200px;
+    
+    
+}
+
+
+.btn_q:hover{
+    box-shadow: none;
 }
