--- a/src/admin/style/style.css
+++ b/src/admin/style/style.css
@@ -19,7 +19,7 @@ body {
     background: #122349;
     width: 300px;
     height: 100%;
-    position: fixed;
+    position:absolute;
 }
 
 
@@ -33,9 +33,10 @@ body {
 }
 
 #menu .logo img {
-    width: 40px;
+    width: 80px;
+    height:auto;
     margin-right: 15px;
-    border-radius: 50%;
+    /* border-radius:50% ; */
 }
 
 #menu .items {
@@ -92,8 +93,8 @@ body {
     background: #fff;
     padding: 15px 30px;
     border-bottom: 3px solid #594ef7;
-    position: fixed;
-    width: calc(100% - 300px);
+    position: absolute;
+    width: calc(100% );
 }
 
 #interface .navigation .search {
@@ -103,6 +104,7 @@ body {
     padding: 10px 14px;
     border: 1px solid #d7dbe6;
     border-radius: 4px;
+    position:absolute;
 }
 
 #interface .navigation .search input {
